Enabled kapt incremental build

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ filtered_hatebu_alias=androiddebugkey
 filtered_hatebu_key_pass=android
 android.useAndroidX=true
 android.enableJetifier=true
+kapt.incremental.apt=true
