--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,8 +166,8 @@ dependencies {
     def paging_version = "2.0.0-rc01"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
-    def play_services_version = "10.0.1"
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.android.gms:play-services-oss-licenses:15.0.1'
 
     def koin_version = "1.0.1"
