--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         classpath "com.google.gms:oss-licenses:0.9.2"
         classpath 'io.fabric.tools:gradle:1.29.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha04"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha04"
     }
 }
 
