--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,9 +157,10 @@ dependencies {
     def nav_version = "2.1.0-alpha04"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    def room_version = "2.0.0-rc01"
+    def room_version = "2.1.0-rc01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     def work_version = "2.0.1"
     implementation "androidx.work:work-runtime-ktx:$work_version"
