--- a/versionGenerator.gradle
+++ b/versionGenerator.gradle
@@ -50,8 +50,8 @@ task bumpVersion {
         def now_whatsnew_time = rootProject.file(whatsnew_path).lastModified()
         def now_release_note_time = rootProject.file(release_note_path).lastModified()
 
-        assert before_whatsnew_time != now_whatsnew_time, "whatsnew file is not updated"
-        assert before_release_note_time != now_release_note_time, "release_note.txt is note updated"
+        assert before_whatsnew_time != now_whatsnew_time, "whatsnew file[${whatsnew_path}] is not updated"
+        assert before_release_note_time != now_release_note_time, "release_note.txt[${release_note_path}] is note updated"
 
         buildTimes++
         println("bumpVersion: version_code=${props.version_code} (before)")
@@ -80,10 +80,17 @@ Properties loadVersionProperties() {
 
 void writeVersionProperties(Properties props) {
     println "props size=${props.size()}"
-    props.forEach { key, value -> println "$key=$value" }
-    file(versionFile).withOutputStream {
-        println "props $props"
-        props.store(it, "versions")
+    def date = ZonedDateTime.now(ZoneId.of("Asia/Tokyo"))
+    props.sort { key1, key2 ->
+        println("key1:${key1} key2:${key2}")
+        key1.key <=> key2.key
+    }
+            .forEach { key, value -> println "$key=$value" }
+    file(versionFile).withWriter("UTF-8") { writer ->
+        writer << "# versions\n"
+        writer << "# ${date}\n"
+        props.sort { key1, key2 -> key1.key <=> key2.key }
+                .forEach { key, value -> writer << "$key=$value\n" }
     }
 }
 
