Disable data collection by Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="jp.gcreate.product.filteredhatebu"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="jp.gcreate.product.filteredhatebu"
     >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,11 +15,27 @@
         android:theme="@style/AppTheme"
         android:name=".CustomApplication"
         >
-        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="false"
+            />
+        <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="false"
+            />
+        <meta-data
+            android:name="google_analytics_adid_collection_enabled"
+            android:value="false"
+            />
+        <meta-data
+            android:name="google_analytics_ssaid_collection_enabled"
+            android:value="false"
+            />
+
         <activity
             android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
-                  >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
