--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.7.20'
     repositories {
-        jcenter()
         google()
-        maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
-        // https://github.com/maskarade/gradle-android-ribbonizer-plugin
-        classpath 'com.github.gfx.ribbonizer:ribbonizer-plugin:2.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.2.0'
-        classpath "com.google.gms:oss-licenses:0.9.2"
-        classpath 'io.fabric.tools:gradle:1.29.0'
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath "com.google.android.gms:oss-licenses-plugin:0.10.5"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha04"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
 }
 
@@ -25,9 +19,8 @@ apply from: rootProject.file("versionGenerator.gradle")
 
 allprojects {
     repositories {
-        jcenter()
         google()
-        maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
     }
 }
 
