--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,8 +140,9 @@ dependencies {
     def nav_version = "2.1.0-alpha04"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    def room_version = "2.1.0-rc01"
+    def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
@@ -172,7 +173,7 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     // json
-    def moshi_version = "1.6.0"
+    def moshi_version = "1.14.0"
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
@@ -215,7 +216,6 @@ dependencies {
     testImplementation "org.assertj:assertj-core:2.9.1"
     testImplementation "androidx.room:room-testing:$room_version"
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
-    testImplementation "org.koin:koin-test:$koin_version"
 }
 
 task openReportJvmTest(type: Exec) {
