--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,8 +146,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
-    def work_version = "2.0.1"
+    def work_version = "2.7.1"
     implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation("androidx.work:work-runtime-ktx:$work_version")
     def paging_version = "2.1.0"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
