--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         targetSdkVersion 33
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         javaCompileOptions {
@@ -105,11 +105,13 @@ android {
         unitTests {
             returnDefaultValues = true
             animationsDisabled = true
+            includeAndroidResources = true
         }
     }
     packagingOptions {
         resources {
             pickFirsts += ['META-INF/atomicfu.kotlin_module']
+            excludes.add("META-INF/*")
         }
     }
     namespace 'jp.gcreate.product.filteredhatebu'
@@ -157,10 +159,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
-    def koin_version = "3.3.0"
-    implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
-    implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
+    def koin_version = "3.2.2"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
+    def koin_android_version = "3.3.0"
+    implementation "io.insert-koin:koin-android:$koin_android_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_android_version"
+    implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
     def koin_compose_version = "3.3.0"
     implementation "io.insert-koin:koin-androidx-compose:$koin_compose_version"
 
@@ -193,27 +197,24 @@ dependencies {
         exclude module: 'xpp3'
     }
 
-    def junit4 = 'junit:junit:4.12'
-    def mockk_version = "1.8.9"
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0-alpha4', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-    }
+    def mockk_version = "1.13.2"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
+    androidTestImplementation "io.mockk:mockk-agent:$mockk_version"
     androidTestImplementation "org.assertj:assertj-core:2.9.1"
-    androidTestImplementation junit4
+    androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
-    testImplementation junit4
-    testImplementation "org.robolectric:robolectric:3.2.2"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.robolectric:robolectric:4.8"
+    testImplementation "androidx.test:core-ktx:1.4.0"
     testImplementation 'org.threeten:threetenbp:1.3.8'
     testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "io.mockk:mockk-agent:$mockk_version"
     testImplementation "org.assertj:assertj-core:2.9.1"
     testImplementation "androidx.room:room-testing:$room_version"
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
