--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.android.gms.oss-licenses-plugin'
     id 'androidx.navigation.safeargs.kotlin'
-    id 'com.google.firebase.crashlytics'
-    id 'com.google.gms.google-services'
 }
 
 ext {
@@ -13,9 +11,10 @@ ext {
     travisBuild = System.getenv("TRAVIS") == "true"
 }
 
-//if (!ciBuild || travisBuild) {
-//    apply plugin: 'com.google.gms.google-services'
-//}
+if (!ciBuild || travisBuild) {
+    apply plugin: 'com.google.gms.google-services'
+    apply plugin: 'com.google.firebase.crashlytics'
+}
 
 android {
     compileSdkVersion 33
